# node-drag-watcher

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  get_osm_token.py  pyproject.toml  revert.py  tag_fix.py  watcher.py
.github/workflows/: docker.yml
checkers/: __init__.py  addr_street.py  drag.py  phone.py  tag_typo.py  website.py
docs/plans/: 2026-03-05-node-drag-watcher-design.md  2026-03-05-node-drag-watcher-plan.md  2026-03-08-checker-plugin-architecture-design.md  2026-03-08-checker-plugin-architecture-plan.md
notifiers/: __init__.py  slack.py
tests/: test_addr_street.py  test_blocks.py  test_detection.py  test_filter.py  test_image.py  test_integration.py  test_parser.py  test_phone.py  test_polling.py  test_real_changesets.py  test_revert.py  test_slack.py  test_tag_fix.py  test_tag_typo.py  test_website.py
tests/fixtures/: 179077097.adiff  179128865.adiff  179136483.adiff  179263148.adiff  179281034.adiff  179326123.adiff  179414342.adiff
